responsive style added

--- a/index.html
+++ b/index.html
@@ -9,22 +9,27 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/70f2c5474e.js" crossorigin="anonymous"></script>
     <!-- CSS StyleSheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <!-- responsive css -->
+    <link rel="stylesheet" href="styles/responsive.css">
 </head>
 
 <body>
     <!-- Header section start -->
     <header>
         <nav>
+            <div class="menu-1">
+                <a href="#"><i class="fas fa-bars"></i></a>
+            </div>
             <div class="logo">
                 <h3>Influence products</h3>
             </div>
             <div class="menu">
-                <a href="#">Home</a>
-                <a href="#">Products</a>
-                <a href="#">Sign up</a>
-                <a href="#">Log in</a>
-                <a href="#"><i class="fas fa-search"></i></a>
+                <a href="#" class="shopping-card">Home</a>
+                <a href="#" class="shopping-card">Products</a>
+                <a href="#" class="shopping-card">Sign up</a>
+                <a href="#" class="shopping-card">Log in</a>
+                <a href="#" class="shopping-card"><i class="fas fa-search"></i></a>
                 <a href="#"><i class="fas fa-shopping-cart"></i></a>
             </div>
         </nav>
@@ -236,7 +241,8 @@
             </div>
             <div class="feature-text">
                 <h1 class="feature-heading">Featured products at one place</h1>
-                <p class="feature-paragraph">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <p class="feature-paragraph">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                    Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                 <button class="feature-button">join now <i class="fas fa-arrow-right"></i></button>
             </div>
         </div>
@@ -246,13 +252,16 @@
     <footer>
         <div class="footer-text">
             <h2>Developed by Razibul Islam</h2>
-            <p>Copyright © 2022  Razibul Islam</p>
+            <p>Copyright © 2022 Razibul Islam</p>
             <p>All rights reserved</p>
             <div class="social-icon">
-                <a href="https://www.instagram.com/razibul.islam.014/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com/razibul.islam.1694059" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/razibul.islam.014/" target="_blank"><i
+                        class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/razibul.islam.1694059" target="_blank"><i
+                        class="fab fa-facebook-f"></i></a>
                 <a href="https://twitter.com/Razibul35001605" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/in/razibul-islam-b0ba46225/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/razibul-islam-b0ba46225/" target="_blank"><i
+                        class="fab fa-linkedin-in"></i></a>
             </div>
         </div>
     </footer>
